--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto= create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.mail.host=smtp
+spring.mail.port=587
+spring.mail.username=mohamed.elhaddad33@gmail.com
+spring.mail.password=jqbd eozk paox ivtr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
